[gd_scene load_steps=4 format=3 uid="uid://bpcrsmhx70e4i"]

[ext_resource type="Script" uid="uid://gvvrujhfci6x" path="res://addons/icosa-gallery/browser.gd" id="1_ervy6"]

[sub_resource type="Gradient" id="Gradient_720sb"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.334783, 0.482609)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fjoeb"]
gradient = SubResource("Gradient_720sb")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
metadata/_snap_enabled = true

[node name="IcosaGalleryBrowser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ervy6")

[node name="Elements" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Selection" type="Panel" parent="Elements"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Elements/Selection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Elements/Selection/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Buttons" type="HBoxContainer" parent="Elements/Selection/HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="First" type="Button" parent="Elements/Selection/HBoxContainer/CenterContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 0
text = "First"

[node name="Previous" type="Button" parent="Elements/Selection/HBoxContainer/CenterContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 0
text = "Previous"

[node name="PageNumbers" type="HBoxContainer" parent="Elements/Selection/HBoxContainer/CenterContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2

[node name="Next" type="Button" parent="Elements/Selection/HBoxContainer/CenterContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 0
text = "Next"

[node name="Last" type="Button" parent="Elements/Selection/HBoxContainer/CenterContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 8
text = "Last"

[node name="HBoxContainer" type="HBoxContainer" parent="Elements/Selection/HBoxContainer"]
layout_mode = 2

[node name="SearchBar" type="LineEdit" parent="Elements/Selection/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
placeholder_text = "search.."

[node name="Search" type="Button" parent="Elements/Selection/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "go"

[node name="Main" type="HBoxContainer" parent="Elements"]
layout_mode = 2
size_flags_vertical = 3

[node name="Info" type="Panel" parent="Elements/Main"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Elements/Main/Info"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Categories" type="VBoxContainer" parent="Elements/Main/Info/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Elements/Main/Info/VBoxContainer"]
layout_mode = 2

[node name="Curated" type="CheckBox" parent="Elements/Main/Info/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "curated"

[node name="Browser" type="Panel" parent="Elements/Main"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="LoadingAnimation" type="Control" parent="Elements/Main/Browser"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Elements/Main/Browser/LoadingAnimation"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Loading" type="TextureProgressBar" parent="Elements/Main/Browser/LoadingAnimation/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
fill_mode = 4
texture_progress = SubResource("GradientTexture2D_fjoeb")

[node name="AssetArea" type="ScrollContainer" parent="Elements/Main/Browser"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Assets" type="GridContainer" parent="Elements/Main/Browser/AssetArea"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[connection signal="pressed" from="Elements/Selection/HBoxContainer/CenterContainer/Buttons/First" to="." method="_on_first_pressed"]
[connection signal="pressed" from="Elements/Selection/HBoxContainer/CenterContainer/Buttons/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="Elements/Selection/HBoxContainer/CenterContainer/Buttons/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Elements/Selection/HBoxContainer/CenterContainer/Buttons/Last" to="." method="_on_last_pressed"]
[connection signal="text_submitted" from="Elements/Selection/HBoxContainer/HBoxContainer/SearchBar" to="." method="_on_search_bar_text_submitted"]
[connection signal="pressed" from="Elements/Main/Info/VBoxContainer/HBoxContainer/Curated" to="." method="_on_curated_pressed"]
